fix: handle cursor timezone overflow and index scan status filters